Connect it to runpod

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,15 @@
     <script type="module" src="app.js"></script>
 </head>
 <body>
+    <!-- Add this at the top of the body -->
+    <div class="startup-overlay">
+        <div class="startup-glitch"></div>
+        <div class="startup-text">SYSTEM INITIALIZING...</div>
+        <div class="startup-progress">
+            <div class="startup-progress-bar"></div>
+        </div>
+    </div>
+
     <h1 class="header">Sundai chatbot</h1>
     <div class="chat-container" id="chat-container">
         <p><strong>Bot:</strong> Hello! How can I assist you today?</p>
