Update header text to Sundai R1

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
         </div>
     </div>
 
-    <h1 class="header">Sundai chatbot</h1>
+    <h1 class="header">Sundai R1</h1>
     <div class="chat-container" id="chat-container">
         <p><strong>Bot:</strong> Hello! How can I assist you today?</p>
     </div>
